--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -18,7 +18,7 @@ jobs:
       matrix:
         os: [ubuntu-latest, windows-latest]
         php: [8.2, 8.1, 8.0]
-        laravel: [10.*, 9.*]
+        laravel: [11.*, 10.*, 9.*]
         dependency-version: [prefer-lowest, prefer-stable]
         include:
           - laravel: 10.*
@@ -26,6 +26,10 @@ jobs:
           - laravel: 9.*
             testbench: 7.*
         exclude:
+          - laravel: 11.*
+            php: 8.0
+          - laravel: 11.*
+            php: 8.1
           - laravel: 10.*
             php: 8.0
           - laravel: 9.*
