--- a/composer.json
+++ b/composer.json
@@ -18,21 +18,15 @@
     ],
     "require": {
         "php": "^8.0|^8.1|^8.2",
-        "ext-fileinfo": "*",
-        "ext-json": "*",
-        "guzzlehttp/guzzle": "^7.0",
         "illuminate/container": "^9.0|^10.0",
         "illuminate/contracts": "^9.0|^10.0",
         "illuminate/http": "^9.0|^10.0",
-        "illuminate/support": "^9.0|^10.0",
-        "jenssegers/model": "^1.5",
-        "php-mqtt/client": "^1.8",
-        "spatie/laravel-enum": "^3.0"
+        "illuminate/support": "^9.0|^10.0"
     },
     "require-dev": {
         "laravel/pint": "*",
         "orchestra/testbench": "^7.0|^8.0",
-        "phpunit/phpunit": "^9.4"
+        "pestphp/pest": "^1.23"
     },
     "minimum-stability": "dev",
     "prefer-stable": true,
@@ -50,7 +44,7 @@
         }
     },
     "scripts": {
-        "test": "vendor/bin/phpunit",
+        "test": "vendor/bin/pest",
         "format": "php-cs-fixer fix --allow-risky=yes",
         "analyse": "phpstan analyse",
         "pint": "vendor/bin/pint --config pint.json"
@@ -58,7 +52,8 @@
     "config": {
         "sort-packages": true,
         "allow-plugins": {
-            "dealerdirect/phpcodesniffer-composer-installer": true
+            "dealerdirect/phpcodesniffer-composer-installer": true,
+            "pestphp/pest-plugin": true
         }
     },
     "extra": {
