--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -17,17 +17,13 @@ jobs:
       fail-fast: false
       matrix:
         os: [ubuntu-latest, windows-latest]
-        php: [8.2, 8.1, 8.0]
+        php: [8.2, 8.1]
         laravel: [11.*, 10.*, 9.*]
         dependency-version: [prefer-lowest, prefer-stable]
         exclude:
           - laravel: 11.*
-            php: 8.0
-          - laravel: 11.*
             php: 8.1
           - laravel: 10.*
-            php: 8.0
-          - laravel: 9.*
             dependency-version: prefer-lowest
 
     steps:
